--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
     <div class="main">
         <div class="title">
-            <h3>微信长按扫码或点击签到</h3>
+            <h3>微信扫码或点击签到</h3>
         </div>
         <div class="notice">
             <p>Tips: 仅供常熟理工学院图书馆座位签到使用</p>
